# typespeed

./: AUTHORS  BUGS  INSTALL  Makefile  Makefile.am  README  aclocal.m4  config.h.in  config.status  configure.ac  copyFiles
distrib/: typespeed.SlackBuild
distrib/CVS/: Root
doc/: Makefile  Makefile.am  Makefile.in
etc/: Makefile  typespeedrc
game/: ABOUT-NLS  ChangeLog  Makefile  Makefile.in  NEWS  README  TODO  config.h  configure
game/distrib/CVS/: Entries  Repository
game/doc/: README
game/etc/: Makefile.am  Makefile.in
game/man/: Makefile  typespeed.6
game/po/: ChangeLog  Makefile  POTFILES  POTFILES.in  it.gmo  it.po  typespeed.pot
game/rules/: Makefile  rule.classic  rule.training  template
game/src/: Makefile  Makefile.in  convert.c  file.c  typespeed.c
game/src/.deps/: typespeed-file.Po  typespeed-menu.Po  typespeed-network.Po  typespeed-typespeed.Po
game/testsuite/: Makefile.am  misc-ctest.c  t_level.c
game/testsuite/.deps/: t_loadwords.Po  t_typorankkaus.Po  t_unescstr.Po
game/words/: Makefile  words.programming
game/words.old/: Makefile  Makefile.am  Makefile.in  words.csharp  words.csharp_with_operators  words.eng  words.esp  words.fin  words.ger  words.prog
man/: Makefile.am  Makefile.in
po/: LINGUAS  Makefile.in  Makevars  de_DE.gmo  de_DE.po  fr_FR.gmo  fr_FR.po
rules/: Makefile.am  Makefile.in
scorescreen/: .Display.hs.swp  .main.hs.swp  Calc.hs  Display.hs  README  index.html  main.hs  stylesheet.css
scorescreen/groups/: Section 2
src/: .file.c.swp  .menu.c.swp  .typespeed.c.swp  Makefile.am  menu.c  misc.c  network.c  pathnames.h  typespeed.c  typespeed.h
src/.deps/: convert.Po  typespeed-misc.Po
testsuite/: Makefile  Makefile.in  t_loadwords.c  t_typorankkaus.c  t_unescstr.c  t_unescstr.sh
testsuite/.deps/: t_level.Po
words/: Makefile  words.programming
words.old/: words.dos  words.dut  words.fra  words.ita  words.por  words.tha  words.unix
