worddir = $(datadir)/@PACKAGE@/words
word_DATA = words.csharp words.csharp_with_operators words.dos words.dut \
	    words.eng words.esp words.fin words.fra words.ger words.ita \
	    words.por words.prog words.tha words.unix

EXTRA_DIST = words.csharp words.csharp_with_operators words.dos words.dut \
	    words.eng words.esp words.fin words.fra words.ger words.ita \
	    words.por words.prog words.tha words.unix
